--- a/src/templates/menu-items.hbs
+++ b/src/templates/menu-items.hbs
@@ -14,15 +14,15 @@
 
             <ul class="tag-list">
                 {{#each ingredients}}
-                <li class="tag-list__item>{{this}}</li>
+                <li class="tag-list__item">{{this}}</li>
                 {{/each}}
-                
+
             </ul>
         </div>
 
         <button class=" card__button button">
-                    <i class="material-icons button__icon"> shopping_cart </i>
-                    В корзину
-                    </button>
+            <i class="material-icons button__icon"> shopping_cart </i>
+            В корзину
+        </button>
     </article>
 </li>
